--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,37 @@
-<h1>All restaurants</h1>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+  <div class="banner-content">
+    <h1>Yelp</h1>
+    <a class="btn btn-primary btn-lg">Find best restaurant</a>
+  </div>
+</div>
 
-<% @restaurants.each do |restaurant| %>
-  <%= link_to restaurant.name, restaurant_path(restaurant)  %>
-<% end %>
+
+<div class="container">
+  <div class="content">
+    <h1 class="text-center">All restaurant</h1>
+    <div class="row">
+    <% @restaurants.each do |restaurant| %>
+      <div class="col-xs-12 col-sm-4">
+        <!-- insert <div class="card"> -->
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://lorempixel.com/400/200/city/');">
+          <div class="card-category">Popular</div>
+            <div class="card-description">
+             <h1><%=  restaurant.name.capitalize %></h1>
+            </div>
+          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+          <a class="card-link" href="#" ></a>
+          <%= link_to "", restaurant_path(restaurant), class: "card-link"  %>
+        </div>
+      </div>
+        <% end %>
+    </div>
+  </div>
+  <div class="content text-center">
+  <%= link_to "New restaurant", new_restaurant_path, class: "btn btn-primary btn-lg"  %>
+  </div>
+</div>
 
 
-<%= link_to "New restaurant", new_restaurant_path  %>
+
+
+
